Se agrego bootstrap en las secciones de los lugares del proyecto

--- a/secciones/Ayuda.html
+++ b/secciones/Ayuda.html
@@ -63,7 +63,7 @@
                 </li>
             </ul>
         <section>
-            <h1 class="seccion-lugares--h1">Contacto</h1>
+            <h1 class="contacto--h1">Contacto</h1>
             <div class="contacto--section--div">
                 <form class="form" action="">
                     <div class="form--div">  
