--- a/secciones/section4.html
+++ b/secciones/section4.html
@@ -84,14 +84,24 @@
                             </button>
                         </div>
                     </div>
-                    <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p pt-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, iusto optio? Consequuntur id asperiores qui earum ipsa tempora assumenda minus adipisci non quibusdam, magnam amet atque eius aspernatur omnis perferendis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis temporibus inventore architecto, dolor autem tempora suscipit a itaque facilis sunt minima sequi doloribus, ad doloremque enim. Est, autem nemo. Quis.</p>
-                    <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Atracciones principales</h2>
-                    <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quo eligendi fugit rem illum ducimus nesciunt quia iste ad nemo molestias ratione exercitationem rerum, quibusdam distinctio consequuntur optio accusantium.</p>
-                    <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Cómo llegar</h2>
-                    <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex iusto laborum harum. Quam pariatur, delectus id aut quisquam repellendus fugiat error iusto ex eligendi veritatis harum repudiandae unde consectetur facere.</p>
-                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3449.5665556381878!2d-67.84468268457196!3d-30.163805981839037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9682ec3d05e629c3%3A0xcce54efd17759dd0!2sParque%20Provincial%20Ischigualasto!5e0!3m2!1ses-419!2sar!4v1647628482738!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Recomendaciones</h2>
-                    <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p pb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, unde fugit? Voluptate aliquam doloremque eveniet atque rerum repellat! Atque voluptas voluptatum iste unde quae fugiat praesentium reiciendis nihil voluptatem error.</p>
+                    <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p py-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, iusto optio? Consequuntur id asperiores qui earum ipsa tempora assumenda minus adipisci non quibusdam, magnam amet atque eius aspernatur omnis perferendis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis temporibus inventore architecto, dolor autem tempora suscipit a itaque facilis sunt minima sequi doloribus, ad doloremque enim. Est, autem nemo. Quis.</p>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12 col-xxl-6 div_lugares">    
+                        <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Atracciones principales</h2>
+                        <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quo eligendi fugit rem illum ducimus nesciunt quia iste ad nemo molestias ratione exercitationem rerum, quibusdam distinctio consequuntur optio accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quo eligendi fugit rem illum ducimus nesciunt quia iste ad nemo molestias ratione exercitationem rerum, quibusdam distinctio consequuntur optio accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quo eligendi fugit rem illum ducimus nesciunt quia iste ad nemo molestias ratione exercitationem rerum, quibusdam distinctio consequuntur optio accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quo eligendi fugit rem illum ducimus nesciunt quia iste ad nemo molestias ratione exercitationem rerum, quibusdam distinctio consequuntur optio accusantium.</p>
+                    </div>
+                    <div class="col-md-12 col-xxl-6">
+                        <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Cómo llegar</h2>
+                        <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex iusto laborum harum. Quam pariatur, delectus id aut quisquam repellendus fugiat error iusto ex eligendi veritatis harum repudiandae unde consectetur facere.</p>
+                        <iframe data-aos="fade-right" data-aos-duration="1250" class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3449.5665556381878!2d-67.84468268457196!3d-30.163805981839037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9682ec3d05e629c3%3A0xcce54efd17759dd0!2sParque%20Provincial%20Ischigualasto!5e0!3m2!1ses-419!2sar!4v1647628482738!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                    <div class="col-md-12">
+                        <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Recomendaciones</h2>
+                        <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p pb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, unde fugit? Voluptate aliquam doloremque eveniet atque rerum repellat! Atque voluptas voluptatum iste unde quae fugiat praesentium reiciendis nihil voluptatem error.</p>
+                    </div>
+                </div>
+            </div>
                 </section>
             </main>
             <footer class="footer">
