Se quito el sticky al nav en modo mobile y se corrigieron erorres

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link poppins" href="/secciones/Ayuda.html">Contacto</a>
+                        <a class="nav-link poppins" href="secciones/Ayuda.html">Contacto</a>
                     </li>
                     </ul>
                 </div>
