--- a/secciones/section5.html
+++ b/secciones/section5.html
@@ -12,8 +12,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" type="text/css" href="../css/normalize.css">
-    <title>Paisajes Argentinos</title>
+    <title>Cataratas del Iguazú - Paisajes Argentinos</title>
     <link rel="shortcut icon" href="../imagenes/landscape.png" type="image/png" />
+    <meta name="keywords" content="PAISAJES ARGENTINOS, TURISMO, ARGENTINO, TURISMO ARGENTINO, ARGENTINA, CATARATAS DEL IGUAZU, PARQUE NACIONAL, CATARATAS">
+    <meta name="description" content="Paisajes argentinos es una página donde vas a encontrar los lugares más recomendados para ver y visitar en el territorio argentino con su información correspondiente y las guías turísticas de cada lugar. ¡Espero que les guste!">
 </head>
 <body>
     <header class="sticky-nav">
