Se arreglaron varias cosas del proyecto

--- a/secciones/section2.html
+++ b/secciones/section2.html
@@ -18,6 +18,7 @@
     <meta name="description" content="Paisajes argentinos es una página donde vas a encontrar los lugares más recomendados para ver y visitar en el territorio argentino con su información correspondiente y las guías turísticas de cada lugar. ¡Espero que les guste!">
 </head>
     <body>
+         <!--navbar-->
         <header class="sticky-nav">
             <nav class="navbar navbar-expand-lg navbar-dark bg-light">
                 <div class="container-fluid">
@@ -47,6 +48,7 @@
             </nav>
         </header>
         <main class="talampaya">
+            <!--barra flotante de redes-->
             <ul class="barra">
                 <li>
                     <a href="https://www.instagram.com/" target="_blank">
@@ -64,6 +66,7 @@
                     </a>
                 </li>
             </ul>
+            <!--parte principal-->
             <section>
                     <div class="seccion-lugares">
                         <h1 class="seccion-lugares--h1 py-4">Parque Nacional Talampaya</h1>
